--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,3 @@
-
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 search: false
@@ -8,4 +7,4 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
-@import custom.css
+@import custom.scss
