--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,4 +7,9 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
- 
+.site-logo img {
+  max-height: 3rem;
+}
+#site-nav .site-title {
+  display:none;
+}
