--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -38,3 +38,10 @@ h2, h3, h4, h5, h6, h7 {
 .page__footer {
   background-color: #3b006f;
 }
+
+.greedy-nav a {
+  color: #3b006f;
+}
+.greedy-nav .visible-links a::before  {
+  background: #3b006f;
+}
